# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  tyoaikakirjanpito.md  vaatimusmaarittely.md  vaatimusmäärittely.md
laskarit/dokumentaatio/src/: pyproject.toml
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: laajempi_sekvenssikaavio.md  luokkkakaavio.md  sekvenssikaavio.md  t1.md  t2.md  t3.md  t4.md
src/: game_loop.py  index.py  level.py  tapahtumat.py  taso.py  user_interface.py
src/sprites/: blocks.py  j_pala.py  l_pala.py  nelio.py  palat.py  pitkula.py  s_pala.py  t_pala.py  z_pala.py
src/tests/: index_test.py
